<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CryptoDetailsActivity">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/coin_icon" />

    <TextView
        android:id="@+id/tv_from_symbols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_slash"
        app:layout_constraintEnd_toStartOf="@id/tv_slash"
        app:layout_constraintTop_toTopOf="@id/tv_slash"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tv_slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/slash"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_icon" />

    <TextView
        android:id="@+id/tv_to_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_slash"
        app:layout_constraintStart_toEndOf="@id/tv_slash"
        app:layout_constraintTop_toTopOf="@id/tv_slash"
        tools:text="USD" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/tv_slash">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tv_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/price"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_current_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_price_label"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="7352.5" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tv_price_label" />

            <TextView
                android:id="@+id/tv_min_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/min_price"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_price_label" />

            <TextView
                android:id="@+id/tv_min_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_min_price_label"
                app:layout_constraintTop_toBottomOf="@id/tv_price_label"
                tools:text="7110.0" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tv_min_price_label" />

            <TextView
                android:id="@+id/tv_max_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/max_price"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_min_price_label" />

            <TextView
                android:id="@+id/tv_max_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_max_price_label"
                app:layout_constraintTop_toBottomOf="@id/tv_min_price_label"
                tools:text="7820.1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tv_max_price_label" />

            <TextView
                android:id="@+id/tvLastMarketLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/last_offer"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_max_price_label" />

            <TextView
                android:id="@+id/tv_last_offer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvLastMarketLabel"
                app:layout_constraintTop_toBottomOf="@id/tv_max_price_label"
                tools:text="Bitfinex" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvLastMarketLabel" />

            <TextView
                android:id="@+id/tvLastUpdateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/last_update"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastMarketLabel" />

            <TextView
                android:id="@+id/tv_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvLastUpdateLabel"
                app:layout_constraintTop_toBottomOf="@id/tv_last_offer"
                tools:text="21:05:16" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>